// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rc-checkbox click checkbox 1`] = `
<span
  class="rc-checkbox"
>
  <input
    class="rc-checkbox-input"
    type="checkbox"
  />
</span>
`;

exports[`rc-checkbox click radio 1`] = `
<span
  class="rc-checkbox rc-checkbox-checked"
>
  <input
    class="rc-checkbox-input"
    type="radio"
  />
</span>
`;

exports[`rc-checkbox control mode 1`] = `
<span
  class="rc-checkbox rc-checkbox-checked"
>
  <input
    checked=""
    class="rc-checkbox-input"
    type="checkbox"
  />
</span>
`;

exports[`rc-checkbox works 1`] = `
<span
  class="rc-checkbox"
>
  <input
    class="rc-checkbox-input"
    type="checkbox"
  />
</span>
`;
